--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,12 @@ dependencies {
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-    //Dagger - Hilt
+    // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.47"
     kapt "com.google.dagger:hilt-android-compiler:2.47"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 }
